Add post on Importing Existing Dialogflow Agents into Terraform

--- a/docs/posts/2022-12-21.md
+++ b/docs/posts/2022-12-21.md
@@ -8,7 +8,10 @@ date: 2022-12-21
 ## Overview
 
 [Dialogflow](https://cloud.google.com/dialogflow/cx/docs) is a powerful tool in
-Google Cloud that you can use to design conversational chat and voice agents.
+Google Cloud that you can use to design conversational agents powered by Natural
+Language Understanding (NLU) to transform user requests into actionable data.
+You can integrate voice and/or chat agents in your app, website, or customer
+support systems to determine user intent and interact with users.
 
 If you've ever wanted to get started with Dialogflow, you might have seen or ran
 through the quickstart steps to
@@ -16,13 +19,17 @@ through the quickstart steps to
 that you can chat with to ask for the store location, get store hours, or make a
 shirt order.
 
-<center><img src="/assets/images/dialogflow-terraform-ui.png" alt="Dialogflow CX Shirt Ordering Agent" width="800px"></center>
+<center>
+  <img src="/assets/images/dialogflow-terraform-ui.png" alt="Dialogflow CX Shirt Ordering Agent" width="800px">
+</center>
 
 In going through the quickstart steps, I wanted to find a way to codify all of
 the Dialogflow components and settings to quickly spin up agents and change
 their configuration. Terraform to the rescue!
 
-<center><img src="/assets/images/dialogflow-terraform-graph.png" alt="Terraform Graph of Dialogflow CX Agent" width="800px"></center>
+<center>
+  <img src="/assets/images/dialogflow-terraform-graph.png" alt="Terraform Graph of Dialogflow CX Agent" width="800px">
+</center>
 
 I used the
 [Terraform modules for Dialogflow CX](https://registry.terraform.io/providers/hashicorp/google/latest/docs/resources/dialogflow_cx_agent)
@@ -40,21 +47,21 @@ in your own Google Cloud account!
 
 ## Setup
 
-There's a few things that you'll need to set up before you run these Terraform
+There are a few things that you'll need to set up before you run these Terraform
 scripts.
 
 1. Register for a
-[Google Cloud account](https://cloud.google.com/docs/get-started).
+   [Google Cloud account](https://cloud.google.com/docs/get-started).
 1. Enable the
-[Dialogflow API](https://cloud.google.com/dialogflow/cx/docs/quick/setup).
+   [Dialogflow API](https://cloud.google.com/dialogflow/cx/docs/quick/setup).
 1. Install and initialize the
-[Google Cloud `gcloud` CLI tool](https://cloud.google.com/sdk/docs/install).
+   [Google Cloud `gcloud` CLI tool](https://cloud.google.com/sdk/docs/install).
 1. Finally, install
-[Terraform](https://developer.hashicorp.com/terraform/downloads). If you're
-using macOS, I recommend installing Terraform with
-[Homebrew](https://brew.sh/). Or, even better, install
-[tfenv](https://github.com/tfutils/tfenv) using `brew install tfenv`, then run
-`tfenv install` so you can easily switch between versions of Terraform!
+   [Terraform](https://developer.hashicorp.com/terraform/downloads). If you're
+   using macOS, I recommend installing Terraform with
+   [Homebrew](https://brew.sh/). Or, even better, install
+   [tfenv](https://github.com/tfutils/tfenv) using `brew install tfenv`, then
+   run `tfenv install` so you can easily switch between versions of Terraform!
 
 ## Usage
 
@@ -94,7 +101,9 @@ google_dialogflow_cx_page.new_order: Creation complete after 0s
 Now you're ready to view and test your agent in the
 [Dialogflow Console](https://dialogflow.cloud.google.com/cx/projects)!
 
-<center><img src="/assets/images/dialogflow-terraform-conversation.png" alt="Dialogflow CX Shirt Ordering Agent" width="500px"></center>
+<center>
+  <img src="/assets/images/dialogflow-terraform-conversation.png" alt="Dialogflow CX Shirt Ordering Agent" width="500px">
+</center>
 
 ## How it works
 
