Minor edit to section headers

--- a/docs/posts/2023-01-05.md
+++ b/docs/posts/2023-01-05.md
@@ -181,7 +181,7 @@ your current directory. Note that you can view the Terraform state in
 human-readable format (and `.tf` friendly format) using the `terraform show`
 command.
 
-### Run Terraform plan
+### Run Terraform plan to view differences
 
 We're not quite done yet, we've just captured the remote state and saved it to
 our local machine (or wherever you are running `terraform import` from).
@@ -225,7 +225,7 @@ Terraform will perform the following actions:
 Plan: 1 to add, 0 to change, 1 to destroy.
 ```
 
-### Modify Terraform configuration files to match
+### Modify Terraform configuration files to match remote state
 
 Now comes the important part, we need to modify the Terraform configuration
 files (`*.tf`) so that they would reproduce the remote state that we captured
